[package]
name = "llvmgr"
version = "0.2.0"
edition = "2021"

[dependencies]
argp = "0.3.0"
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["stream"] }
indicatif = "0.17.3"
futures-util = "0.3.28"
xz2 = "0.1.7"
tar = "0.4.38"
which = "4.4.0"
directories = "5.0.0"
flume = "0.10.14"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.96"
nom = "7.1.3"
term_size = "0.3.2"
fs_extra = "1.3.0"
color-eyre = "0.6.2"
thiserror = "1.0.40"
libflate = "2.0.0"
